# ouroboros

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BIBLE.md  BUG_AUDIT.md  CLAUDE.md  Dockerfile  IMPROVE.md  INSTALL.md  LICENSE  Makefile  PROJECT_RU.md  README.md  docker-compose.yml  launcher.py  openai-codex-0.114.0.tgz  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json  test_tools.py
data/: container_to_host.txt  host_to_container.txt  host_visibility_check.txt
docs/: AUTONOMY_MONITOR_2026-02-25.md  evolution.json  index.html  robots.txt  sitemap.xml
ouro/: __init__.py  agent.py  arch_review.py  consciousness.py  context.py  llm.py  loop.py  memory.py  review.py  utils.py
ouroboros/: __init__.py  agent.py  apply_patch.py  arch_review.py  bootstrap_env.py  consciousness.py  context.py  llm.py  loop.py  memory.py  memory_backends.py  owner_inject.py  parallel_executor.py  pricing.py  response_verification.py  review.py  timeout_handler.py  tool_args.py  utils.py
prompts/: CONSCIOUSNESS.md  SYSTEM.md
supervisor/: __init__.py  events.py  git_ops.py  queue.py  state.py  telegram.py  trace_web.py  workers.py
tests/: __init__.py  test_agent_startup_git.py  test_agent_user_messages.py  test_architecture_md.py  test_auto_resume_dedup.py  test_bootstrap_env.py  test_consciousness_wakeup.py  test_constitution.py  test_context_goals.py  test_control_journals.py  test_core_read_paths.py  test_direct_chat_queue.py  test_evolution_circuit_breaker.py  test_git_lock.py  test_git_ops_autopreserve.py  (+37 more)
(+50 files in other folders)
