[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouroboros"
version = "7.3.0"
description = "Self-creating agent"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "mem0ai>=1.0.4",
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.0",
    "requests>=2.31.0",
    "ruff>=0.6.0",
    "tiktoken>=0.7.0",
    "telethon>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.4.0",
    "pytest>=7.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
markers = ["timeout: set test timeout in seconds (e2e tests)"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter
